--- a/index-light.html
+++ b/index-light.html
@@ -183,7 +183,7 @@
 					</ul>
 					<br>
 					<div class="load_more" style="padding-right: 120px;">
-						<a href="img/Mohammed Salman Resume.pdf" data-done="Done" data-no="No more articles found" download>
+						<a href="img/Mohammed_Salman_Fullstack.pdf" data-done="Done" data-no="No more articles found" download>
 							<span class="text"> Download Resume</span>
 						</a>
 					</div>
